--- a/src/components/CategoryList/CategotyList.css
+++ b/src/components/CategoryList/CategotyList.css
@@ -64,6 +64,9 @@
         align-items: center;
         padding: 10px 0;
     }
+    .category-item{
+        border: none;
+    }
 
     .category-item p {
         font-size: 1rem;
